--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
         <div class="tem-1">
             <img src="images/eh.png" alt="">
         </div>
+
+    </section>
+    <h1 class="mini">
+        <marquee behavior="" direction="right">Mini <span style="color: aqua ;">Website</span> Published</marquee>
+    </h1>
+    <section class="templeate1">
+
+        <div class="tem-1">
+            <img src="images/p2.png" alt="">
+        </div>
+        <div class="tem-1">
+            <h1>2nd Part Website</h1>
+            <h2>Become A Web Developer</h2>
+            <p>Welcome to my first web site.I will try to do something good.Please let me know how the website works.
+                Again - Welcome to my first web site.I will try to do something good.Please let me know how the website
+                works.</p>
+            <a target="_blank" href="https://ebrahimeh.github.io/cool-boy/">Click my-Web</a>
+        </div>
+
     </section>
 </body>
 
