The End practic web

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="tem-1">
             <h1>Wellcome <span style="color: rgb(164, 210, 196) ;">To</span></h1>
             <h1><span style="color: rgb(194, 205, 45);">Md Ebrahim</span> Website</h1>
-            <h3 style="color: rgb(64, 125, 125);">Hlw mr and miss how are you</h3>
+            <h2 style="color: rgb(64, 125, 125);">Hlw mr and miss how are you</h2>
             <p>Welcome to my first web site.I will try to do something good.Please let me know how the website works.
                 Again -
                 Welcome to my first web site.I will try to do something good.Please let me know how the website works.
@@ -47,6 +47,27 @@
         </div>
 
     </section>
+    <h1 id="strat">Start Learning Web Desing</h1>
+    <section class="templet2">
+
+
+        <div class="last-web1">
+            <h1 style="color: rgb(234, 193, 193) ;">Full Stack Developer</h1>
+            <h2>20222 - present pro-level developer</h2>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div class="last-web1">
+            <h1 style="color: rgb(215, 112, 57) ;">Baby Web Developer</h1>
+            <h2>20222 - present pro-level developer</h2>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+    </section>
+    <h3>© Mr Eh Web 2021, a Programming Hero initiative.</h3>
+    <h3>Md Ebrahim Eh</h3>
 </body>
 
 </html>
